    unary minus after exponentiation operator now works

- bach.reg, bach.value, bach.pv
    Fixed memory leak related to the text editor window

- bach.score: XML import: mismatched ties do not cause pitch misplacement on the second note
        Pickup measures are correctly imported
        Accidentals are correctly dealt with when importing multi-voice parts
        Fixed crash when importing empty lyrics with empty "text" tag 
    XML import and export: three-quarters-sharp and -flat accidentals have correct name now (was "three-quarter")
        complex time signatures are correctly handled

- bach.roll:
    MIDI import: if both markmeasures and markdivisions are on (as per default), and "bach barline" markers are present in the MIDI file, then measure barlines are not calculated
        New "importdivisions" message attribute, overriding "markdivisions"
        New "importsubdivisions" message attribute
        Staves are now correctly ordered by MIDI channel in format 0
    exportmidi: new "exportbarlines" message attribute
        new "exportdivisions" message attribute
        fixed bug causing data corruption if notes in channel 16 were present

- bach.shelf: fixed crash with @embed 1 when reopening patch

- bach.textin: now works correctly with lllls starting with a number

- bach.constraints: evaluation order of same-size domains is not changed



v0.8.1b

Scroll down for very important things you should now about v0.8b

**********************
*** VERY IMPORTANT ***
**********************

- bach has switched to square brackets [] instead of parens ().
  	THIS WILL NOT BREAK BACKWARD COMPATIBILITY and you can still continue using () if you liked them.
  	However we had good reasons for pushing forward this change. Look at the "what's new" tab in the bach overview.


*****************
*** IMPORTANT ***
*****************

*** THESE CHANGES MIGHT BREAK COMPATIBILITY WITH OLDER PATCHES ***

- bach.roll, bach.score